[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwo-cardiac"
version = "1.0.0"
description = "Dual-modal cardiac biometrics SDK - WiFi CSI + BLE Wearables"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "NWO Capital", email = "ciprian.pater@publicae.org"}
]
keywords = ["biometrics", "cardiac", "wifi-csi", "ble", "wearables", "access-control", "healthcare", "robotics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Security",
    "Topic :: System :: Hardware",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "bleak>=0.19.0",
    "pyserial>=3.5",
    "websockets>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=22.0",
    "mypy>=0.991",
    "flake8>=5.0",
]
clinical = [
    "hl7>=0.4",
    "pydicom>=2.3",
]
robotics = [
    "roslibpy>=1.5",
]
all = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "black>=22.0",
    "mypy>=0.991",
    "hl7>=0.4",
    "pydicom>=2.3",
    "roslibpy>=1.5",
]

[project.urls]
Homepage = "https://github.com/nwocapital/nwo-cardiac-sdk"
Documentation = "https://github.com/nwocapital/nwo-cardiac-sdk/wiki"
Repository = "https://github.com/nwocapital/nwo-cardiac-sdk"
Issues = "https://github.com/nwocapital/nwo-cardiac-sdk/issues"
Changelog = "https://github.com/nwocapital/nwo-cardiac-sdk/blob/main/CHANGELOG.md"

[project.scripts]
nwo-cardiac = "nwo_cardiac.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
